tizzit-312 websearch for secured pages optimized
git-svn-id: http://tizzit.googlecode.com/svn/trunk@802 e03753de-7d0d-11de-8963-3b09bc248160